WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30094
Incorrect forward declaration of 'struct FrameLoadRequest' as 'class FrameLoadRequest' leads to compile warnings
https://bugs.webkit.org/show_bug.cgi?id=30094
Summary
Incorrect forward declaration of 'struct FrameLoadRequest' as 'class FrameLoa...
James Robinson
Reported
2009-10-05 13:51:00 PDT
Summary says it all.
Attachments
Patch to fix decl
(766 bytes, patch)
2009-10-05 13:53 PDT
,
James Robinson
barraclough
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Patch including ChangeLog entry
(912 bytes, patch)
2009-10-05 14:28 PDT
,
James Robinson
eric
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Moves the decl down with the other 'struct ...' declaration
(966 bytes, patch)
2009-10-05 14:39 PDT
,
James Robinson
darin
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Removes "No new tests (OOPS) line from ChangeLog"
(933 bytes, patch)
2009-10-05 16:00 PDT
,
James Robinson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2009-10-05 13:53:05 PDT
Created
attachment 40658
[details]
Patch to fix decl
WebKit Commit Bot
Comment 2
2009-10-05 14:17:35 PDT
Comment on
attachment 40658
[details]
Patch to fix decl Rejecting patch 40658 from commit-queue. Found no modified ChangeLogs, cannot create a commit message. All changes require a ChangeLog. See:
http://webkit.org/coding/contributing.html
James Robinson
Comment 3
2009-10-05 14:28:41 PDT
Created
attachment 40661
[details]
Patch including ChangeLog entry
Eric Seidel (no email)
Comment 4
2009-10-05 14:31:01 PDT
Comment on
attachment 40661
[details]
Patch including ChangeLog entry LGTM. I'm assuming you meant cq? as well. (Sadly bugzilla-tool post-diff has no --commit-queue option yet.
bug 29202
.)
Darin Adler
Comment 5
2009-10-05 14:32:07 PDT
The struct one should go down in the next paragraph with the other struct rather than in the class paragraph.
WebKit Commit Bot
Comment 6
2009-10-05 14:36:17 PDT
Comment on
attachment 40661
[details]
Patch including ChangeLog entry Rejecting patch 40661 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--quiet', '--exit-after-n-failures=1']" exit_code: 1 Running build-dumprendertree Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Testing 11378 test cases. fast/dom/prototype-inheritance.html -> failed Exiting early after 1 failures. 5487 tests run. 95.67s total testing time 5486 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 1 test case (<1%) had stderr output
James Robinson
Comment 7
2009-10-05 14:39:26 PDT
Created
attachment 40663
[details]
Moves the decl down with the other 'struct ...' declaration
Eric Seidel (no email)
Comment 8
2009-10-05 14:57:27 PDT
Sorry, the bots were behind. They were showing green but the build was actually red. Hence the invalid rejection. I'll file a bug about the commit-queue not noticing that hte bots were behind.
Eric Seidel (no email)
Comment 9
2009-10-05 15:02:22 PDT
False rejection was caused by
bug 30098
.
WebKit Commit Bot
Comment 10
2009-10-05 15:54:39 PDT
Comment on
attachment 40663
[details]
Moves the decl down with the other 'struct ...' declaration Rejecting patch 40663 from commit-queue. Failed to run "['git', 'svn', 'dcommit']" exit_code: 1 Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog M WebCore/loader/RedirectScheduler.h A repository hook failed: MERGE request failed on '/repository/webkit/trunk': Commit blocked by pre-commit hook (exit code 1) with output: svnlook: Can't write to stream: Broken pipe The following ChangeLog files contain OOPS: trunk/WebCore/ChangeLog Please don't ever say "OOPS" in a ChangeLog file. at /usr/local/libexec/git-core//git-svn line 469
Darin Adler
Comment 11
2009-10-05 15:57:24 PDT
Need to remove the "No new tests (OOPS)" line from the change log.
James Robinson
Comment 12
2009-10-05 16:00:28 PDT
Created
attachment 40670
[details]
Removes "No new tests (OOPS) line from ChangeLog"
WebKit Commit Bot
Comment 13
2009-10-05 17:27:20 PDT
Comment on
attachment 40670
[details]
Removes "No new tests (OOPS) line from ChangeLog" Rejecting patch 40670 from commit-queue. Failed to run "WebKitTools/Scripts/build-webkit" exit_code: 1 Last 500 characters of output: rivedSources/WebCore/JSCanvasRenderingContext3D.cpp -o /Users/eseidel/Projects/build/WebCore.build/Release/WebCore.build/Objects-normal/i386/JSCanvasRenderingContext3D.o ** BUILD FAILED ** The following build commands failed: WebCore: Distributed-CompileC /Users/eseidel/Projects/build/WebCore.build/Release/WebCore.build/Objects-normal/i386/RenderThemeMac.o /Users/eseidel/Projects/CommitQueue/WebCore/rendering/RenderThemeMac.mm normal i386 objective-c++ com.apple.compilers.gcc.4_2 (1 failure)
Eric Seidel (no email)
Comment 14
2009-10-05 21:01:15 PDT
Comment on
attachment 40670
[details]
Removes "No new tests (OOPS) line from ChangeLog" The commit-queue has landed nearly 400 patches by now, and this is the first time I've seen false failures like these. So either this is a real failure caused by this patch, or you've hit
bug 30098
twice (I saw
bug 30098
for the first time today!). Not sure yet. Either way, my apologies for the inconvenience.
WebKit Commit Bot
Comment 15
2009-10-05 21:12:49 PDT
Comment on
attachment 40670
[details]
Removes "No new tests (OOPS) line from ChangeLog" Clearing flags on attachment: 40670 Committed
r49144
: <
http://trac.webkit.org/changeset/49144
>
WebKit Commit Bot
Comment 16
2009-10-05 21:12:53 PDT
All reviewed patches have been landed. Closing bug.
Adam Barth
Comment 17
2009-10-05 21:17:02 PDT
Thanks! I was just abou to fix this. ;)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug