2009-10-05  James Robinson  <jamesr@google.com>

Reviewed by Darin Adler.

        Fix forward declaration (struct vs class mismatch)

        https://bugs.webkit.org/show_bug.cgi?id=30094

        * loader/RedirectScheduler.h:

Canonical link: https://commits.webkit.org/40703@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49144 268f45cc-cd09-0410-ab3c-d52691b4dbfc